# rdawg_3D_pack

./: .gitignore  LICENSE  README.md  TEST_RESULTS.md  USAGE_GUIDE.md  __init__.py  build_xformers.py  build_xformers_simple.py  core_3d.py  create_test_models.py  download_open3d.py  install.py  mesh_analysis.py  mesh_processing.py  point_cloud.py  pyproject.toml  requirements.txt  test_package.py
docs/: 3D_MODELS_GUIDE.md  INSTALLATION.md  PYTHON_311_SETUP.md  USAGE.md
examples/: basic_model_viewer.json  product_photography.json
scripts/: download_wheels.py  setup_development.py
test_workflows/: README.md  advanced_rendering.json  analysis_comparison.json  analysis_demo.json  basic_test.json  comparison_demo.json  complete_pipeline_test.json  core_nodes_test.json  creative_demo.json  feature_extraction_demo.json  geometry_processing.json  mesh_analysis_focused.json  mesh_analysis_test.json  mesh_processing_demo.json  mesh_processing_test.json  mesh_reconstruction.json  mixed_operations.json  optimization_demo.json  pipeline_demo.json  point_cloud_advanced.json  point_cloud_demo.json  point_cloud_test.json  processing_pipeline.json  transformation_demo.json
