[project]
name = "rdawg-3d-pack-cu128-pytorch-2.9.0"
description = "Modern 3D Processing Nodes for ComfyUI - Optimized for CUDA 12.8 + PyTorch 2.9.0"
version = "1.0.0"
license = {text = "MIT"}
authors = [
    {name = "rdawgemfl", email = "rdawgemfl@example.com"},
]
maintainers = [
    {name = "rdawgemfl", email = "rdawgemfl@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["comfyui", "3d", "mesh", "pointcloud", "neural-rendering", "cuda12", "pytorch29", "rdawg"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    # Core dependencies with flexible versions for PyTorch 2.9.0 compatibility
    # PyTorch CUDA 12.8 support - install from PyTorch index
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",

    # 3D core libraries
    "trimesh>=4.0.0",

    # Utility libraries
    "tqdm>=4.65.0",
    "einops>=0.7.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.0",
]

[project.optional-dependencies]
full = [
    # Complete 3D processing suite
    # Open3D wheels: https://github.com/isl-org/Open3D/releases/tag/v0.19.0
    "open3d>=0.19.0",
    "pytorch3d>=0.7.5",
    "torch-geometric>=2.4.0",
    "kaolin>=0.15.0",
    "pymeshlab>=2022.2",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "assimp>=5.3.0",
    "gltflib>=1.16.0",
    "stl>=2.16.0",
    "plyfile>=1.0.0",
    "laspy>=2.5.0",
]

neural = [
    # Neural rendering and advanced ML
    "transformers>=4.35.0",
    "diffusers>=0.24.0",
    "accelerate>=0.24.0",
    "xformers>=0.0.32",
    "bitsandbytes>=0.41.0",
]

reconstruction = [
    # 3D reconstruction and structure from motion
    "nerfacc>=0.5.0",
    "nerfstudio>=1.0.0",
]

dev = [
    # Development dependencies
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/rdawgemfl/rdawg-3d-pack"
Repository = "https://github.com/rdawgemfl/rdawg-3d-pack"
Documentation = "https://github.com/rdawgemfl/rdawg-3d-pack#readme"
"Bug Reports" = "https://github.com/rdawgemfl/rdawg-3d-pack/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md", "*.glsl", "*.vert", "*.frag"]

[tool.comfy]
PublisherId = "rdawgemfl"
DisplayName = "RDAWG 3D Pack (CUDA 12.8 + PyTorch 2.9.0)"
Icon = "🔷"